<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutStatusPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/view_background"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />
    <Button
        android:id="@+id/buttonInstallAppUpdate"
        android:text="@string/install"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <Button
        android:id="@+id/buttonDontInstallAppUpdate"
        android:text="@string/notnow"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>