<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutMenuBarButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menubar_background"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="4dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/menubar_vrheight"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/menubar_topbottommargin"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="@dimen/menubar_topbottommargin"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/buttonLoadImage"
        android:layout_width="@dimen/menubar_buttonwidth"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="@dimen/menubar_topbottommargin"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="@dimen/menubar_topbottommargin"
        android:background="@drawable/button_background"
        android:paddingStart="0dp"
        android:paddingEnd="1dp"
        android:text="@string/load_image"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonSaveImage"
        android:layout_width="@dimen/menubar_buttonwidth"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="@dimen/menubar_topbottommargin"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="@dimen/menubar_topbottommargin"
        android:background="@drawable/button_background"
        android:paddingStart="0dp"
        android:paddingEnd="1dp"
        android:text="@string/save_image"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="@dimen/menubar_buttonwidth"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="@dimen/menubar_topbottommargin"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="@dimen/menubar_topbottommargin"
        android:background="@drawable/button_background"
        android:paddingStart="0dp"
        android:paddingEnd="1dp"
        android:text="@string/help"
        android:textColor="@android:color/white"
        android:textSize="12sp" />
</LinearLayout>