<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutAllAppContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:focusableInTouchMode="true"
    android:gravity="start"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutMenuBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menubar_height"
        android:layout_weight="1"
        android:gravity="end"
        android:background="@drawable/menubar_background"
        android:orientation="horizontal" >
        <include
            layout="@layout/menubar_maincontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1000"
        android:background="@android:color/black"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageViewDstCam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/view_background"
            android:contentDescription="@string/imageview_dstcam"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/imageViewDstCamOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imageview_dstcam_overlay" />

        <LinearLayout
            android:id="@+id/linearLayoutSrcCamView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/view_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSrcCamTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/srccam_title"
                android:textColor="@android:color/white"
                android:textSize="8sp" />
            <TextView
                android:id="@+id/textViewSrcCamImageSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/srccam_imagesize"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <ImageView
                android:id="@+id/imageViewSrcCam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/view_background"
                android:contentDescription="@string/imageview_srccam"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <include
            layout="@layout/status_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <include
            layout="@layout/cameraparameters_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

        <include
            layout="@layout/help_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="12dp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@android:color/darker_gray" />

    <include
        layout="@layout/adview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />
</LinearLayout>